[package]
name = "serialcat"
description = "Serial port commandline interface for embedded development"
version = "0.1.0"
authors = ["syuzuki <syuzuki15@gmail.com>"]
license = "Apache-2.0/MIT"
edition = "2018"

[[bin]]
name = "sc"
path = "src/main.rs"

[dependencies]
tokio = { version = "0.2.6", features = ["full"] }
tokio-serial = "4.3.3"
anyhow = "1.0.26"
structopt = "0.3.5"
bytes = "0.5.3"
futures = "0.3.1"
